@@ -1,8 +1,5 @@
 package com.tpms.service.impl;
 
-import java.sql.CallableStatement;
-import java.sql.Connection;
-import java.sql.ResultSet;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.time.LocalDate;
@@ -12,9 +9,6 @@ import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
-
-import javax.sql.DataSource;
 
 import org.json.JSONArray;
 import org.json.JSONException;
@@ -24,7 +18,6 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
-import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Service;
 
 import com.tpms.dto.PageResponse;
@@ -32,7 +25,6 @@ import com.tpms.dto.ResourcePoolProjection;
 import com.tpms.entity.Activity;
 import com.tpms.entity.ActivityAllocation;
 import com.tpms.entity.ActivityAllocationDetails;
-import com.tpms.entity.Attendance;
 import com.tpms.entity.Platform;
 import com.tpms.entity.ResourcePool;
 import com.tpms.repository.ActivityAllocationDetailsRepository;
@@ -46,6 +38,10 @@ import com.tpms.service.ActivityService;
 @Service
 public class ActivityServiceImpl implements ActivityService {
 	
+	private static final String CATEGORY = "category";
+
+	private static final String YYYY_MM_DD = "yyyy-MM-dd";
+
 	@Autowired
     private ActivityRepository activityRepository;
 	
@@ -64,10 +60,8 @@ public class ActivityServiceImpl implements ActivityService {
 	@Autowired
 	AttendanceRepository attendanceRepo;
 	
-	@Autowired
-	private JdbcTemplate jdbcTemplate;
     
-    public Activity SaveActivity(Activity activity)
+    public Activity saveActivity(Activity activity)
     {
     	return activityRepository.save(activity);
     }
@@ -108,7 +102,6 @@ public class ActivityServiceImpl implements ActivityService {
     }
     
     public void updateDeletedFlag(Integer activityId, boolean deletedFlag) {
-        //activityRepository.updateDeletedFlag(activityId, deletedFlag);
     	Activity activity = activityRepository.findById(activityId).orElseThrow();
         activity.setDeletedFlag(deletedFlag);
         activityRepository.save(activity);
@@ -124,39 +117,22 @@ public class ActivityServiceImpl implements ActivityService {
 	
 	public List<ResourcePool> getFilteredResources(String activityDate, Integer platformId) {
 		List<ResourcePool> resources = null;
-		List<ResourcePool> filteredResources = null;
-		SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
+		SimpleDateFormat sdf = new SimpleDateFormat(YYYY_MM_DD);
 		try {
 			Date parsedDate = sdf.parse(activityDate);
-			resources = new ArrayList<>(); // resourceRepo.findAllActiveRecords(parsedDate,platformId);
-//			resources.forEach(resource->resource.getActivityAlloc().forEach(alloc->{
-//				if(alloc.getActivityDate()==null || !parsedDate.equals(alloc.getActivityDate()))
-//					resource.getActivityAlloc().remove(alloc);
-//			}));
-//			Stream<ResourcePool> resourceStream = resources.stream();
-//			filteredResources = resourceStream.map(resource->
-//				new ResourcePool(
-//						resource.getActivityAlloc().stream()
-//						.filter(alloc->parsedDate.equals(alloc.getActivityDate())).toList()
-//						//.collect(Collectors.toList())
-//				)
-//			);
-//			for (ResourcePool resource : resources) {
-//				for (ActivityAllocation allocation : resource.getActivityAlloc()) {
-//					if(parsedDate.equals(allocation.getActivityDate()))
-//						resource.getActivityAlloc().
-//				}
-//			}
+			resources = new ArrayList<>(); 
 			for(int i=0; i<resources.size(); i++) {
-				List<ActivityAllocation> activityAlloc = new ArrayList(); // resources.get(i).getActivityAlloc();
+				List<ActivityAllocation> activityAlloc = new ArrayList<>();
 				int j = 0;
 				while(j<activityAlloc.size()) {
-					if(!parsedDate.equals(activityAlloc.get(j).getActivityFromDate()) || activityAlloc.get(j).getDeletedFlag())
+					
+					if(!parsedDate.equals(activityAlloc.get(j).getActivityFromDate()) || Boolean.TRUE.equals(activityAlloc.get(j).getDeletedFlag()))
+					{
 						activityAlloc.remove(j);
+					}
 					else
 						j++;
 				}
-//				resources.get(i).setActivityAlloc(activityAlloc);
 			}
 		} catch (ParseException e) {
 			e.printStackTrace();
@@ -207,17 +183,7 @@ public class ActivityServiceImpl implements ActivityService {
 
 		List<ActivityAllocationDetails> updatedList = new ArrayList<>();
 		try {
-			for (int i = 0; i < markedResources.length(); i++) {
-				JSONObject resource = markedResources.getJSONObject(i);
-				ActivityAllocationDetails newDetail = new ActivityAllocationDetails();
-				newDetail.setActivityAllocateDetId(resource.optInt("activityAllocateDetId") == 0 ? null
-						: resource.getInt("activityAllocateDetId"));
-				newDetail.setResourceId(resource.getInt("resourceId"));
-				newDetail.setPlatformId(resource.getInt("platformId"));
-				newDetail.setActivityAllocation(allocData);
-				updatedList.add(newDetail);
-				resourceIdList.add(resource.getInt("resourceId"));
-			}
+			extractedForLoop(markedResources, allocData, resourceIdList, updatedList);
 
 		} catch (JSONException e) {
 			e.printStackTrace();
@@ -233,7 +199,7 @@ public class ActivityServiceImpl implements ActivityService {
 			if(allocData.getActivityFor()==3) {
 				fullDayActivity = activityAllocRepo.isFullDayActivityPresent(allocData.getActivityFromDate(),
 						allocData.getActivityToDate());
-				response.put("category", "fullDayActivity");
+				response.put(CATEGORY, "fullDayActivity");
 				response.put("data", fullDayActivity);
 			}
 			
@@ -241,21 +207,21 @@ public class ActivityServiceImpl implements ActivityService {
 				activityCountByDate = activityAllocRepo.countExistingActivityByDateRange(
 						allocData.getActivity().getActivityId(), allocData.getActivityFromDate(),
 						allocData.getActivityToDate(), allocData.getFromHours(), allocData.getToHours());
-				response.put("category", "activityByDate");
+				response.put(CATEGORY, "activityByDate");
 				response.put("data", activityCountByDate);
 			}
 			
 			if(fullDayActivity == 0 && activityCountByDate == 0) {
 				activityCountBySession = activityAllocRepo.countExistingActivityBySession(allocData.getActivity().getActivityId(),
 						allocData.getActivityFromDate(), allocData.getActivityToDate(), allocData.getActivityFor());
-				response.put("category", "activityBySession");
+				response.put(CATEGORY, "activityBySession");
 				response.put("data", activityCountBySession);
 			}
 			
-			if (fullDayActivity == 0 && activityCountByDate==0 && activityCountBySession==0 && !allocData.getActivity().getIsProject()) {
+			if (fullDayActivity == 0 && activityCountByDate==0 && activityCountBySession==0 && Boolean.TRUE.equals(!allocData.getActivity().getIsProject())) {
 				existingResourceList = activityAllocRepo.checkExistingResourcesByDateRange(resourceIdList, allocData.getActivityFromDate(), allocData.getActivityToDate(),
 						allocData.getFromHours(), allocData.getToHours());
-				response.put("category", "resource");
+				response.put(CATEGORY, "resource");
 				response.put("data", existingResourceList);
 			}
 		}
@@ -276,10 +242,25 @@ public class ActivityServiceImpl implements ActivityService {
 	}
 
 
+	private void extractedForLoop(JSONArray markedResources, ActivityAllocation allocData, List<Integer> resourceIdList,
+			List<ActivityAllocationDetails> updatedList) throws JSONException {
+		for (int i = 0; i < markedResources.length(); i++) {
+			JSONObject resource = markedResources.getJSONObject(i);
+			ActivityAllocationDetails newDetail = new ActivityAllocationDetails();
+			newDetail.setActivityAllocateDetId(resource.optInt("activityAllocateDetId") == 0 ? null
+					: resource.getInt("activityAllocateDetId"));
+			newDetail.setResourceId(resource.getInt("resourceId"));
+			newDetail.setPlatformId(resource.getInt("platformId"));
+			newDetail.setActivityAllocation(allocData);
+			updatedList.add(newDetail);
+			resourceIdList.add(resource.getInt("resourceId"));
+		}
+	}
+
+
 	@Override
 	public Integer platformIdByName(String platformName) {
-		Integer id=platformRepo.findPlatformIdByPlatform(platformName);
-		return id;
+		return platformRepo.findPlatformIdByPlatform(platformName);
 	}
 
 
@@ -291,15 +272,14 @@ public class ActivityServiceImpl implements ActivityService {
 	public String getDate(String str) {
 		DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd-MM-yyyy");
         LocalDate date = LocalDate.parse(str, formatter);
-        DateTimeFormatter targetFormatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
-        String formattedDate = date.format(targetFormatter);
-		return formattedDate;
+        DateTimeFormatter targetFormatter = DateTimeFormatter.ofPattern(YYYY_MM_DD);
+        return date.format(targetFormatter);
 	}
 
 
 	@Override
 	public List<ActivityAllocation> fetchDataByDateRange(String activityFromDate, String activityToDate) {
-		SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
+		SimpleDateFormat sdf = new SimpleDateFormat(YYYY_MM_DD);
 		try {
 			if(!"null".equals(activityFromDate) && !"null".equals(activityToDate))
 				return activityAllocRepo.fetchDataByDateRange(sdf.parse(activityFromDate),sdf.parse(activityToDate));
@@ -312,12 +292,10 @@ public class ActivityServiceImpl implements ActivityService {
 	@Override
 	public List<String> getAllActivityAuto(String value) {
 		String searchLowerCase = value.toLowerCase();
-		List<String> allUniName=activityRepository.findAll().stream()
+		return activityRepository.findAll().stream()
                 .map(x -> x.getActivityName())
                 .filter(activityName -> activityName.toLowerCase().contains(searchLowerCase))
-                .distinct()
-                .collect(Collectors.toList());
-		return allUniName;
+                .distinct().toList();
 	}
 
 
